ONA_Software/v2/slave_modbus/build/log/idf_py_stdout_output_491693
[1/10] Performing build step for 'bootloader'
[1/1] cd /home/ziad/ziad_ws/Takamul_ONA/ONA_Software/v2/slave_modbus/build/bootloader/esp-idf/esptool_py && /home/ziad/.espressif/python_env/idf5.4_py3.10_env/bin/python /home/ziad/esp/esp-idf/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x1000 /home/ziad/ziad_ws/Takamul_ONA/ONA_Software/v2/slave_modbus/build/bootloader/bootloader.bin
Bootloader binary size 0x6580 bytes. 0xa80 bytes (9%) free.
[2/8] Building CXX object esp-idf/main/CMakeFiles/__idf_main.dir/modbus_slave.cpp.obj
FAILED: esp-idf/main/CMakeFiles/__idf_main.dir/modbus_slave.cpp.obj 
ccache /home/ziad/.espressif/tools/xtensa-esp-elf/esp-14.2.0_20241119/xtensa-esp-elf/bin/xtensa-esp32-elf-g++ -DESP_PLATFORM -DIDF_VER=\"v5.4.1-dirty\" -DMBEDTLS_CONFIG_FILE=\"mbedtls/esp_config.h\" -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -DSOC_XTAL_FREQ_MHZ=CONFIG_XTAL_FREQ -D_GLIBCXX_HAVE_POSIX_SEMAPHORE -D_GLIBCXX_USE_POSIX_SEMAPHORE -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -I/home/ziad/ziad_ws/Takamul_ONA/ONA_Software/v2/slave_modbus/build/config -I/home/ziad/ziad_ws/Takamul_ONA/ONA_Software/v2/slave_modbus/main -I/home/ziad/esp/esp-idf/components/newlib/platform_include -I/home/ziad/esp/esp-idf/components/freertos/config/include -I/home/ziad/esp/esp-idf/components/freertos/config/include/freertos -I/home/ziad/esp/esp-idf/components/freertos/config/xtensa/include -I/home/ziad/esp/esp-idf/components/freertos/FreeRTOS-Kernel/include -I/home/ziad/esp/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -I/home/ziad/esp/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include/freertos -I/home/ziad/esp/esp-idf/components/freertos/esp_additions/include -I/home/ziad/esp/esp-idf/components/esp_hw_support/include -I/home/ziad/esp/esp-idf/components/esp_hw_support/include/soc -I/home/ziad/esp/esp-idf/components/esp_hw_support/include/soc/esp32 -I/home/ziad/esp/esp-idf/components/esp_hw_support/dma/include -I/home/ziad/esp/esp-idf/components/esp_hw_support/ldo/include -I/home/ziad/esp/esp-idf/components/esp_hw_support/debug_probe/include -I/home/ziad/esp/esp-idf/components/esp_hw_support/port/esp32/. -I/home/ziad/esp/esp-idf/components/esp_hw_support/port/esp32/include -I/home/ziad/esp/esp-idf/components/heap/include -I/home/ziad/esp/esp-idf/components/heap/tlsf -I/home/ziad/esp/esp-idf/components/log/include -I/home/ziad/esp/esp-idf/components/soc/include -I/home/ziad/esp/esp-idf/components/soc/esp32 -I/home/ziad/esp/esp-idf/components/soc/esp32/include -I/home/ziad/esp/esp-idf/components/soc/esp32/register -I/home/ziad/esp/esp-idf/components/hal/platform_port/include -I/home/ziad/esp/esp-idf/components/hal/esp32/include -I/home/ziad/esp/esp-idf/components/hal/include -I/home/ziad/esp/esp-idf/components/esp_rom/include -I/home/ziad/esp/esp-idf/components/esp_rom/esp32/include -I/home/ziad/esp/esp-idf/components/esp_rom/esp32/include/esp32 -I/home/ziad/esp/esp-idf/components/esp_rom/esp32 -I/home/ziad/esp/esp-idf/components/esp_common/include -I/home/ziad/esp/esp-idf/components/esp_system/include -I/home/ziad/esp/esp-idf/components/esp_system/port/soc -I/home/ziad/esp/esp-idf/components/esp_system/port/include/private -I/home/ziad/esp/esp-idf/components/xtensa/esp32/include -I/home/ziad/esp/esp-idf/components/xtensa/include -I/home/ziad/esp/esp-idf/components/xtensa/deprecated_include -I/home/ziad/esp/esp-idf/components/lwip/include -I/home/ziad/esp/esp-idf/components/lwip/include/apps -I/home/ziad/esp/esp-idf/components/lwip/include/apps/sntp -I/home/ziad/esp/esp-idf/components/lwip/lwip/src/include -I/home/ziad/esp/esp-idf/components/lwip/port/include -I/home/ziad/esp/esp-idf/components/lwip/port/freertos/include -I/home/ziad/esp/esp-idf/components/lwip/port/esp32xx/include -I/home/ziad/esp/esp-idf/components/lwip/port/esp32xx/include/arch -I/home/ziad/esp/esp-idf/components/lwip/port/esp32xx/include/sys -I/home/ziad/esp/esp-idf/components/esp_driver_gpio/include -I/home/ziad/esp/esp-idf/components/esp_driver_uart/include -I/home/ziad/esp/esp-idf/components/vfs/include -I/home/ziad/esp/esp-idf/components/esp_driver_i2c/include -I/home/ziad/esp/esp-idf/components/esp_adc/include -I/home/ziad/esp/esp-idf/components/esp_adc/interface -I/home/ziad/esp/esp-idf/components/esp_adc/esp32/include -I/home/ziad/esp/esp-idf/components/esp_adc/deprecated/include -I/home/ziad/esp/esp-idf/components/esp_wifi/include -I/home/ziad/esp/esp-idf/components/esp_wifi/include/local -I/home/ziad/esp/esp-idf/components/esp_wifi/wifi_apps/include -I/home/ziad/esp/esp-idf/components/esp_wifi/wifi_apps/nan_app/include -I/home/ziad/esp/esp-idf/components/esp_event/include -I/home/ziad/esp/esp-idf/components/esp_phy/include -I/home/ziad/esp/esp-idf/components/esp_phy/esp32/include -I/home/ziad/esp/esp-idf/components/esp_netif/include -I/home/ziad/esp/esp-idf/components/mqtt/esp-mqtt/include -I/home/ziad/esp/esp-idf/components/tcp_transport/include -I/home/ziad/esp/esp-idf/components/esp-tls -I/home/ziad/esp/esp-idf/components/esp-tls/esp-tls-crypto -I/home/ziad/esp/esp-idf/components/mbedtls/port/include -I/home/ziad/esp/esp-idf/components/mbedtls/mbedtls/include -I/home/ziad/esp/esp-idf/components/mbedtls/mbedtls/library -I/home/ziad/esp/esp-idf/components/mbedtls/esp_crt_bundle/include -I/home/ziad/esp/esp-idf/components/mbedtls/mbedtls/3rdparty/everest/include -I/home/ziad/esp/esp-idf/components/mbedtls/mbedtls/3rdparty/p256-m -I/home/ziad/esp/esp-idf/components/mbedtls/mbedtls/3rdparty/p256-m/p256-m -I/home/ziad/esp/esp-idf/components/esp_timer/include -I/home/ziad/esp/esp-idf/components/esp_http_client/include -I/home/ziad/esp/esp-idf/components/esp_http_server/include -I/home/ziad/esp/esp-idf/components/http_parser -I/home/ziad/esp/esp-idf/components/nvs_flash/include -I/home/ziad/esp/esp-idf/components/esp_partition/include -I/home/ziad/esp/esp-idf/components/nvs_sec_provider/include -mlongcalls -Wno-frame-address  -fno-builtin-memcpy -fno-builtin-memset -fno-builtin-bzero -fno-builtin-stpcpy -fno-builtin-strncpy -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-error=extra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -Og -fno-shrink-wrap -fmacro-prefix-map=/home/ziad/ziad_ws/Takamul_ONA/ONA_Software/v2/slave_modbus=. -fmacro-prefix-map=/home/ziad/esp/esp-idf=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -std=gnu++2b -fno-exceptions -fno-rtti -fuse-cxa-atexit -MD -MT esp-idf/main/CMakeFiles/__idf_main.dir/modbus_slave.cpp.obj -MF esp-idf/main/CMakeFiles/__idf_main.dir/modbus_slave.cpp.obj.d -o esp-idf/main/CMakeFiles/__idf_main.dir/modbus_slave.cpp.obj -c /home/ziad/ziad_ws/Takamul_ONA/ONA_Software/v2/slave_modbus/main/modbus_slave.cpp
/home/ziad/ziad_ws/Takamul_ONA/ONA_Software/v2/slave_modbus/main/modbus_slave.cpp: In member function 'void vfd::send_ack()':
/home/ziad/ziad_ws/Takamul_ONA/ONA_Software/v2/slave_modbus/main/modbus_slave.cpp:39:20: error: 'm_rts' was not declared in this scope; did you mean 'vfd_rts'?
   39 |     gpio_set_level(m_rts, 0);
      |                    ^~~~~
      |                    vfd_rts
/home/ziad/ziad_ws/Takamul_ONA/ONA_Software/v2/slave_modbus/main/modbus_slave.cpp: At global scope:
/home/ziad/ziad_ws/Takamul_ONA/ONA_Software/v2/slave_modbus/main/modbus_slave.cpp:4:20: warning: 'TAG' defined but not used [-Wunused-variable]
    4 | static const char* TAG = "VFD_CLASS";
      |                    ^~~
ninja: build stopped: subcommand failed.
